--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -4,9 +4,9 @@ print_info() {
     info title
     info underline
 
-    info "╭─ OS" distro
-    info "├─ Uptime" uptime
-    info "╰─ Packages" packages
+    info "OS" distro
+    info "Uptime" uptime
+    info "Packages" packages
 
     prin "---------------"
 
