--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,9 +1,13 @@
 set colorscheme jungle
 
 set preview_images true
+set preview_images_method kitty
 
 set draw_borders true
 
+set show_hidden false
+
 # Shortcuts
-map ;z eval fm.execute_console('shell unzip %f')
+map ;ze eval fm.execute_console('extract %f.extracted')
+map ;zc eval fm.execute_console('compress %f.zip')
 map ;r eval fm.execute_console('bulkrename')
