--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -1,5 +1,133 @@
-# text editor
-mime ^text, label editor = nano -- "$@"
-mime ^text, label pager = $PAGER -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart = vscodium -- "$@"
-!mime ^text, label pager, ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart = $PAGER -- "$@"
+#-------------------------------------------
+# Misc
+#-------------------------------------------
+# Define the "editor" for text files as first action
+mime ^text,  label editor = nano -- "$@"
+mime ^text,  label pager  = $PAGER -- "$@"
+!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart|nim = vscodium -- "$@"
+!mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart|nim = $PAGER -- "$@"
+
+ext 1                         = man "$1"
+ext s[wmf]c, has zsnes, X     = zsnes "$1"
+ext s[wmf]c, has snes9x-gtk,X = snes9x-gtk "$1"
+ext nes, has fceux, X         = fceux "$1"
+ext exe, has wine             = wine "$1"
+ext nim, has nim 	      = nim r -- "$1"
+name ^[mM]akefile$            = make
+
+#--------------------------------------------
+# Scripts
+#-------------------------------------------
+# ext py  = python -- "$1"
+# ext pl  = perl -- "$1"
+# ext rb  = ruby -- "$1"
+# ext js  = node -- "$1"
+# ext sh  = sh -- "$1"
+# ext php = php -- "$1"
+# ext dart = dart run -- "$1"
+
+#--------------------------------------------
+# Audio without X
+#-------------------------------------------
+mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
+mime ^audio|ogg$, terminal, has mplayer2 = mplayer2 -- "$@"
+mime ^audio|ogg$, terminal, has mplayer  = mplayer -- "$@"
+ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
+
+#--------------------------------------------
+# Video/Audio with a GUI
+#-------------------------------------------
+mime ^video|^audio, has gmplayer, X, flag f = gmplayer -- "$@"
+mime ^video|^audio, has smplayer, X, flag f = smplayer "$@"
+mime ^video,        has iina,     X, flag f = iina -- "$@"
+mime ^video|^audio, has iina,     X, flag f = iina --music-mode -- "$@"
+mime ^video,        has mpv,      X, flag f = mpv -- "$@"
+mime ^video,        has mpv,      X, flag f = mpv --fs -- "$@"
+mime ^video,        has mplayer2, X, flag f = mplayer2 -- "$@"
+mime ^video,        has mplayer2, X, flag f = mplayer2 -fs -- "$@"
+mime ^video,        has mplayer,  X, flag f = mplayer -- "$@"
+mime ^video,        has mplayer,  X, flag f = mplayer -fs -- "$@"
+mime ^video|^audio, has vlc,      X, flag f = vlc -- "$@"
+mime ^video|^audio, has totem,    X, flag f = totem -- "$@"
+mime ^video|^audio, has totem,    X, flag f = totem --fullscreen -- "$@"
+mime ^audio,        has audacity, X, flag f = audacity -- "$@"
+ext aup,            has audacity, X, flag f = audacity -- "$@"
+
+#--------------------------------------------
+# Video without X
+#-------------------------------------------
+mime ^video, terminal, !X, has mpv       = mpv -- "$@"
+mime ^video, terminal, !X, has mplayer2  = mplayer2 -- "$@"
+mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
+
+#-------------------------------------------
+# Documents
+#-------------------------------------------
+ext pdf, has llpp,     X, flag f = llpp "$@"
+ext pdf, has zathura,  X, flag f = zathura -- "$@"
+ext pdf, has mupdf,    X, flag f = mupdf "$@"
+ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
+ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
+ext pdf, has xpdf,     X, flag f = xpdf -- "$@"
+ext pdf, has papers,   X, flag f = papers -- "$@"
+ext pdf, has evince,   X, flag f = evince -- "$@"
+ext pdf, has atril,    X, flag f = atril -- "$@"
+ext pdf, has okular,   X, flag f = okular -- "$@"
+ext pdf, has epdfview, X, flag f = epdfview -- "$@"
+ext pdf, has qpdfview, X, flag f = qpdfview "$@"
+ext pdf, has open,     X, flag f = open "$@"
+ext pdf, has firefox,  X, flag f = firefox "$@"
+
+ext sc,    has sc,                    = sc -- "$@"
+ext docx?, has catdoc,       terminal = catdoc -- "$@" | $PAGER
+
+ext                        sxc|xlsx?|xlt|xlw|gnm|gnumeric, has gnumeric,    X, flag f = gnumeric -- "$@"
+ext                        sxc|xlsx?|xlt|xlw|gnm|gnumeric, has kspread,     X, flag f = kspread -- "$@"
+ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has libreoffice, X, flag f = libreoffice "$@"
+ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has soffice,     X, flag f = soffice "$@"
+ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has ooffice,     X, flag f = ooffice "$@"
+
+ext djvu, has zathura,X, flag f = zathura -- "$@"
+ext djvu, has papers, X, flag f = papers -- "$@"
+ext djvu, has evince, X, flag f = evince -- "$@"
+ext djvu, has atril,  X, flag f = atril -- "$@"
+ext djvu, has djview, X, flag f = djview -- "$@"
+
+ext epub, has ebook-viewer, X, flag f = ebook-viewer -- "$@"
+ext epub, has zathura,      X, flag f = zathura -- "$@"
+ext epub, has mupdf,        X, flag f = mupdf -- "$@"
+ext mobi, has ebook-viewer, X, flag f = ebook-viewer -- "$@"
+
+ext cb[rz], has qcomicbook, X, flag f = qcomicbook "$@"
+ext cb[rz], has mcomix,     X, flag f = mcomix -- "$@"
+ext cb[rz], has zathura,    X, flag f = zathura -- "$@"
+ext cb[rz], has atril,      X, flag f = atril -- "$@"
+
+ext sla,  has scribus,      X, flag f = scribus -- "$@"
+
+#-------------------------------------------
+# Images
+#-------------------------------------------
+mime ^image, has viewnior,  X, flag f = viewnior -- "$@"
+
+mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
+mime ^image/svg, has display,  X, flag f = display -- "$@"
+
+mime ^image, has imv,       X, flag f = imv -- "$@"
+mime ^image, has pqiv,      X, flag f = pqiv -- "$@"
+mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
+mime ^image, has feh,       X, flag f, !ext gif = feh -- "$@"
+mime ^image, has mirage,    X, flag f = mirage -- "$@"
+mime ^image, has ristretto, X, flag f = ristretto "$@"
+mime ^image, has eog,       X, flag f = eog -- "$@"
+mime ^image, has eom,       X, flag f = eom -- "$@"
+mime ^image, has nomacs,    X, flag f = nomacs -- "$@"
+mime ^image, has geeqie,    X, flag f = geeqie -- "$@"
+mime ^image, has gpicview,  X, flag f = gpicview -- "$@"
+mime ^image, has gwenview,  X, flag f = gwenview -- "$@"
+mime ^image, has xviewer,   X, flag f = xviewer -- "$@"
+mime ^image, has mcomix,    X, flag f = mcomix -- "$@"
+mime ^image, has gimp,      X, flag f = gimp -- "$@"
+mime ^image, has krita,     X, flag f = krita -- "$@"
+ext kra,     has krita,     X, flag f = krita -- "$@"
+ext xcf,                    X, flag f = gimp -- "$@"
