--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ source = ~/.config/hypr/monitors.conf
 ### AUTOSTART ###
 #################
 $waybar = "~/.config/hypr/scripts/waybarreload.sh"
-exec-once = $waybar & hyprpaper & firefox & telegram-desktop
+exec-once = $waybar & hyprpaper & firefox & telegram-desktop & syncthing
 
 #############################
 ### ENVIRONMENT VARIABLES ###
