new-ranger-config

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -2,7 +2,7 @@
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-mime ^text,  label editor = nano -- "$@"
+mime ^text,  label editor = vscodium -- "$@"
 mime ^text,  label pager  = $PAGER -- "$@"
 !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart|nim = vscodium -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart|nim = $PAGER -- "$@"
@@ -131,3 +131,7 @@ mime ^image, has gimp,      X, flag f = gimp -- "$@"
 mime ^image, has krita,     X, flag f = krita -- "$@"
 ext kra,     has krita,     X, flag f = krita -- "$@"
 ext xcf,                    X, flag f = gimp -- "$@"
+
+
+# blender
+ext blend, has blender, X, flag f = blender "$@"
