--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -3,6 +3,9 @@ set colorscheme jungle
 set preview_images true
 set preview_images_method kitty
 
+#set preview_script ~/.config/ranger/scope.sh
+# ranger --copy-config=scope.sh
+
 set draw_borders true
 
 set show_hidden false
