--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -2,9 +2,9 @@
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-mime ^text,  label editor = vscodium -- "$@"
+mime ^text,  label editor = code -- "$@"
 mime ^text,  label pager  = $PAGER -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart|nim = vscodium -- "$@"
+!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart|nim = code -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart|nim = $PAGER -- "$@"
 
 ext 1                         = man "$1"
