--- a/.config/waybar/upbar.jsonc
+++ b/.config/waybar/upbar.jsonc
@@ -31,7 +31,8 @@
     "telegram": "",
     "nm-connection-editor": "\uF1EB",
     "blueman-manager": "\uF294",
-    "vlc": ""
+    "vlc": "",
+    "steam": ""
   }
   },
 
