--- a/.config/hypr/input.conf
+++ b/.config/hypr/input.conf
@@ -15,9 +15,10 @@ input {
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+#gestures {
+#    workspace_swipe = false
+#}
+#gesture = fingers, direction, action, options
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
