--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -13,4 +13,4 @@ set show_hidden false
 # Shortcuts
 map ;ze eval fm.execute_console('extract %f.extracted')
 map ;zc eval fm.execute_console('compress %f.zip')
-map ;r eval fm.execute_console('bulkrename')
+map ;b eval fm.execute_console('bulkrename')
