--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ source = ~/.config/hypr/monitors.conf
 #################
 ### AUTOSTART ###
 #################
-$waybar = "~/.config/hypr/scripts/waybarreload.sh"
+$waybar = ~/.config/hypr/scripts/waybarreload.sh
 exec-once = $waybar & hyprpaper & firefox & telegram-desktop & syncthing
 
 #############################
