--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,8 +12,9 @@ source = ~/.config/hypr/monitors.conf
 #################
 ### AUTOSTART ###
 #################
-$waybar = ~/.config/hypr/scripts/waybarreload.sh
-exec-once = $waybar & hyprpaper & firefox & telegram-desktop & syncthing
+$wayReload = ~/.config/hypr/scripts/waybarreload.sh
+exec-once = $wayReload & hyprpaper & firefox & telegram-desktop & syncthing
+exec-once = systemctl --user start hyprpolkitagent
 
 #############################
 ### ENVIRONMENT VARIABLES ###
