--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,6 +1,13 @@
 $wallpaper = ~/.config/hypr/bg.jpg
 
-preload = $wallpaper
+wallpaper {
+    monitor = eDP-1
+    path = $wallpaper
+    fit_mode = cover
+}
 
-wallpaper = , $wallpaper
-
+wallpaper {
+    monitor = HDMI-A-1          
+    path = $wallpaper
+    fit_mode = cover
+}
